CI - Add test stage to pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,3 +21,16 @@ bundle_app:
   stage: build
   script:
     - npm run build
+
+stages:
+   - install
+   - build
+   - test
+e2etest:    
+    stage: test
+    before_script:
+      - npm install -g http-server
+      - npm install cypress
+    script:
+       # start the server in the background
+      - npm run start:ci
