CI - Add test stage to pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,7 @@ stages:
   - install
   - build
   - test
-
 # Jobs 
-
 install_dependencies:
   stage: install
   script:
@@ -21,6 +19,9 @@ bundle_app:
   stage: build
   script:
     - npm run build
+  artifacts:
+    paths:
+      - build/
 
 e2etest:    
     stage: test
