--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,3 +41,10 @@ e2etest:
     script:
        # start the server in the background
       - npm run start:ci
+
+build_jobX:
+  stage: build
+  only:
+    - demobranch
+  script:
+    - echo "build job X on demoBranch works"
