--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "antd": "^4.9.2",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.2.0",
     "react": "^16.11.0",
