--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,25 +42,6 @@ e2etest:
     script:
        # start the server in the background
       - npm run start:ci
-
-build_jobX:
-  stage: build
-  only:
-    - demobranch
-  script:
-    - echo "build job X on demoBranch works"
-
-test_jobX:
-  stage: test
-  only:
-    - master
-    - demobranch2
-  script:
-    - echo "test job X"
-    
-exercise_job:
-  stage: before test after build
-  only:
-    - master
-  script:
-    - echo "exercise job"
+    only:
+      - master
+      - staging
