--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "antd": "^4.9.2",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
+    "firebase": "^8.2.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.11.0",
     "react-hook-form": "^3.29.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "reactfire": "^3.0.0-rc.0"
   },
   "scripts": {
     "storybook": "start-storybook -s ./public -p 6006 -c ./.storybook",
